--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -1,30 +1,30 @@
 ---
 - name: Clone repo branch
   git:
-    repo: '{{ codex_repo_url }}'
-    version: '{{ codex_repo_branch }}'
-    dest: '{{ codex_repo_path }}'
+    repo: '{{ nim_codex_repo_url }}'
+    version: '{{ nim_codex_repo_branch }}'
+    dest: '{{ nim_codex_repo_path }}'
     force: true
     update: true
-  become_user: '{{ codex_user }}'
+  become_user: '{{ nim_codex_user }}'
 
 - name: Check if node binary exists
   stat:
-    path: '{{ codex_repo_path }}/build/codex'
-  register: codex_bin
+    path: '{{ nim_codex_repo_path }}/build/codex'
+  register: nim_codex_bin
 
 - name: Create timer for build script
   include_role: name=systemd-timer
   vars:
-    systemd_timer_name: '{{ codex_build_service_name }}'
-    systemd_timer_user: '{{ codex_user }}'
-    systemd_timer_group: '{{ codex_group }}'
-    systemd_timer_description: 'Build {{ codex_service_name }}'
-    systemd_timer_start_on_creation: '{{ not codex_bin.stat.exists }}'
+    systemd_timer_name: '{{ nim_codex_build_service_name }}'
+    systemd_timer_user: '{{ nim_codex_user }}'
+    systemd_timer_group: '{{ nim_codex_group }}'
+    systemd_timer_description: 'Build {{ nim_codex_service_name }}'
+    systemd_timer_start_on_creation: '{{ not nim_codex_bin.stat.exists }}'
     systemd_timer_ionice_class: 'idle'
     systemd_timer_consul_warning: true
-    systemd_timer_enabled: '{{ codex_build_timer_enabled }}'
-    systemd_timer_frequency: '{{ codex_build_frequency }}'
-    systemd_timer_timeout_sec: '{{ codex_build_timer_timeout }}'
-    systemd_timer_work_dir: '{{ codex_service_path }}'
-    systemd_timer_script_path: '{{ codex_service_path }}/build.sh'
+    systemd_timer_enabled: '{{ nim_codex_build_timer_enabled }}'
+    systemd_timer_frequency: '{{ nim_codex_build_frequency }}'
+    systemd_timer_timeout_sec: '{{ nim_codex_build_timer_timeout }}'
+    systemd_timer_work_dir: '{{ nim_codex_service_path }}'
+    systemd_timer_script_path: '{{ nim_codex_service_path }}/build.sh'
