--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -1,24 +1,23 @@
-#TODO
-#---
-#- name: 'Create Consul service definition'
-#  include_role: name=consul-service
-#  vars:
-#    consul_config_name: '{{ nim_codex_consul_service_file_name }}'
-#    consul_services:
-#      - id: '{{ nim_codex_service_name }}'
-#        name: '{{ nim_codex_consul_service_name }}'
-#        port: '{{ nim_codex_listening_port }}'
-#        address: '{{ nim_codex_public_address }}'
-#        tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus']
-#
-#      - id: '{{ nim_codex_service_name }}-metrics'
-#        name: '{{ nim_codex_consul_metrics_service_name }}'
-#        port: '{{ nim_codex_metrics_port }}'
-#        address: '{{ ansible_local.wireguard.vpn_ip }}'
-#        tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus', 'metrics']
-#        meta:
-#          container: '{{ nim_codex_service_name }}'
-#        checks:
-#          - name: '{{ nim_codex_consul_metrics_service_name }}-health'
-#            type: 'http'
-#            http: 'http://localhost:{{ nim_codex_metrics_port }}/health'
+---
+- name: 'Create Consul service definition'
+  include_role: name=consul-service
+  vars:
+    consul_config_name: '{{ nim_codex_consul_service_file_name }}'
+    consul_services:
+      - id:   '{{ nim_codex_service_name }}'
+        name: '{{ nim_codex_consul_service_name }}'
+        port: '{{ nim_codex_listening_port }}'
+        address: '{{ nim_codex_public_address }}'
+        tags: ['{{ env }}.{{ stage }}', 'codex', 'storage']
+
+      - id:   '{{ nim_codex_service_name }}-metrics'
+        name: '{{ nim_codex_consul_metrics_service_name }}'
+        port: '{{ nim_codex_metrics_port }}'
+        address: '{{ ansible_local.wireguard.vpn_ip }}'
+        tags: ['{{ env }}.{{ stage }}', 'codex', 'storage', 'metrics']
+        meta:
+          container: '{{ nim_codex_service_name }}'
+        checks:
+          - name: '{{ nim_codex_consul_metrics_service_name }}-health'
+            type: 'http'
+            http: 'http://localhost:{{ nim_codex_metrics_port }}/health'
