--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,4 +5,4 @@
 - include_tasks: build.yml
 - include_tasks: service.yml
 - include_tasks: firewall.yml
-#- include_tasks: consul.yml
+- include_tasks: consul.yml
