--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@ nim_codex_build_timer_timeout: 3600
 nim_codex_build_frequency: 'daily'
 nim_codex_build_days_kept: 3
 nim_codex_build_jobs: '{{ ansible_processor_vcpus / 2 | round(0, "ceil") }}'
-nim_codex_build_log_level: 'TRACE'
+nim_codex_build_log_level: 'DEBUG'
 nim_codex_build_restarts_service: true
 nim_codex_build_nim_flags: >-
   -d:noSignalHandler
