[wip] conditionally supply codex_eth_public_key as cli param, drop contract vars/params

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,10 +31,8 @@ codex_max_peers: 160
 codex_discovery_port: 9000
 codex_listening_port: 9000
 
-# Ethereum public key for Codex node and addresses of deployed Codex contracts
+# Ethereum public key for Codex node
 codex_eth_public_key: ''
-codex_eth_storage_contract: ''
-codex_eth_token_contract: ''
 
 # Firewall
 codex_firewall_libp2p_open: true
