--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -8,7 +8,7 @@
 
 - name: Create systemd Unit file
   template:
-    src: 'beacon-node.service.j2'
+    src: 'codex.service.j2'
     dest: '/etc/systemd/system/{{ nim_codex_service_name }}.service'
     mode: 0644
   register: nim_codex_service_definition
