service: use new format of listen and announce flags
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,8 +29,9 @@ nim_codex_repo_branch: 'main'
 nim_codex_log_level: 'INFO' # TRACE DEBUG INFO NOTICE WARN ERROR FATAL NONE
 
 # connectivity settings
-nim_codex_public_address: '{{ ansible_host }}'
 nim_codex_max_peers: 160
+nim_codex_announce_address: '{{ ansible_host }}'
+nim_codex_listening_address: 0.0.0.0
 nim_codex_listening_port: 9000 # TCP
 nim_codex_discovery_port: 9000 # UDP
 nim_codex_rest_port: 5052
